# boilerplate

./: .gitignore  .npmignore  CHANGELOG.md  boilerplate.cabal
.github/workflows/: haskell-ci.yml
cdk/: package-lock.json  package.json
cdk/lib/: stack.ts
frontend/: .parcelrc  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: Main.elm  index.js
src/: Example.hs
