cabal-version:      2.2
name:               boilerplate
version:            0.1.0.0
synopsis:           AWS Lambda application using servant and wai-handler-hal
description:
  The executable built by this package defines and implements a
  Servant API, and then uses wai-handler-hal to package it into a
  binary which can run as a Lambda Proxy Integration of an AWS API
  Gateway REST API. It is a fork from https://github.com/bellroy/wai-handler-hal

bug-reports:        http://github.com/adrianomelo/boilerplate/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Adriano Melo <adriano@purely.fun>
maintainer:         Adriano Melo <adriano@purely.fun>
copyright:          Copyright (C) 2024 Adriano Melo
category:           AWS, Cloud
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

tested-with:
  GHC ==8.6.5
   || ==8.8.4
   || ==8.10.7
   || ==9.0.2
   || ==9.2.8
   || ==9.4.8
   || ==9.6.6
   || ==9.8.2

common opts
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Werror=incomplete-patterns
    -Wredundant-constraints -Wpartial-fields -Wtabs
    -Wmissing-local-signatures -fhelpful-errors
    -fprint-expanded-synonyms -fwarn-unused-do-bind

common deps
  build-depends:
    , aeson            >=1.5.6.0 && <1.6   || >=2.0  && <2.3
    , base             >=4.12    && <4.20
    , servant          >=0.18.2  && <0.21
    , servant-server   >=0.18.2  && <0.21
    , text             ^>=1.2.3  || ^>=2.0 || ^>=2.1
    , wai-handler-hal

executable boilerplate-hal
  import:         opts, deps
  hs-source-dirs: exe/hal
  main-is:        Main.hs
  build-depends:
    , hal                      >=0.4.7 && <0.4.11 || >=1.0.0 && <1.2
    , boilerplate

  ghc-options:    -threaded -static -optl-static
  cc-options:     -static
  ld-options:     -static -pthread

executable boilerplate-warp
  import:         opts, deps
  hs-source-dirs: exe/warp
  main-is:        Main.hs
  build-depends:
    , boilerplate
    , warp                     >=3.3.14 && <3.5

  ghc-options:    -threaded

library
  import:          opts, deps
  hs-source-dirs:  src
  exposed-modules: Example

source-repository head
  type:     git
  location: https://github.com/adrianomelo/boilerplate.git
